# prefect-lab

./: .gitignore  README.md  pyproject.toml
.junie/: guidelines.md
src/: __init__.py  pipeline.py
tests/: __init__.py  test_pipeline.py
