[project]
name = "prefect-lab"
version = "0.1.0"
description = "Prefect pipeline for processing ECB currency exchange rate data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "prefect>=2.0.0",
    "requests>=2.25.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
